--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.3",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -23,7 +24,7 @@
     "framer-motion": "^12.11.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.510.0",
-    "next": "15.3.2",
+    "next": "^15.3.3",
     "p-limit": "^6.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
